# linkml-validator

./: 404.html  LICENSE  README.md  changelog.md  index.html  mkdocs.yml  objects.inv  setup.cfg  sitemap.xml
.github/workflows/: deploy-documentation.yml  pypi-publish.yml  run-tests.yml
design/: index.html
docs/: design.md  index.md  installation.md  usage.md
docs/reference/: models.md  plugins.md  utils.md  validator.md
examples/: example_data1.json  example_data1_validation_report.json  example_data2.json  example_data2_validation_report.json  example_schema.yaml
installation/: index.html
linkml_validator/: cli.py  models.py  utils.py  validator.py
linkml_validator/plugins/: base.py  jsonschema_validation.py  range_validation.py
reference/: index.html
reference/models/: index.html
reference/plugins/: index.html
reference/utils/: index.html
reference/validator/: index.html
tests/integration/: test_custom_plugin.py  test_validator.py
tests/resources/data/: test_schema1_data.json
tests/resources/schema/: test_schema1.yml
tutorials/: Data validation (Part 1).ipynb  Data validation (Part 2).ipynb  Data validation with custom plugins.ipynb
usage/: index.html
