[metadata]
name = linkml_validator
version = attr: linkml_validator.__version__
description = LinkML Validator
url = https://github.com/deepakunni3/linkml-validator
long_description = file: README.md
long_description_content_type = text/markdown
author = Deepak Unni
author_email = deepak.unni3@gmail.com
license = BSD3
classifiers =
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: BSD License
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    pydantic>=1.9.0
    linkml>=1.1.18
    stringcase>=1.2.0

python_requires = >= 3.8

[options.entry_points]
console_scripts =
    linkml-validator = linkml_validator.cli:cli

[options.packages.find]
exclude = tests
