[metadata]
name = linkml_validator
version = attr: linkml_validator.__version__
description = LinkML Validator
url = https://github.com/linkml/linkml-validator
long_description = file: README.md
long_description_content_type = text/markdown
author = Deepak Unni
author_email = deepak.unni3@gmail.com
license = BSD3
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: BSD License
    Topic :: Scientific/Engineering :: Bio-Informatics
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    pydantic>=1.8.2
    linkml>=1.1.18
    linkml_runtime>=1.2.0
    stringcase>=1.2.0
    click>=7.0.0

python_requires = >= 3.8

[options.extras_require]
dev =
    pytest
    pytest-cov
    mkdocs
    mkdocs-material
    mkdocstrings
    mkdocstrings-python-legacy

[options.entry_points]
console_scripts =
    linkml-validator = linkml_validator.cli:cli

[options.packages.find]
exclude = tests
